--- a/JavaScript30/04 - Array Cardio Day 1/index.html
+++ b/JavaScript30/04 - Array Cardio Day 1/index.html
@@ -41,22 +41,53 @@
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const births = inventors.sort((last, next) => {
+      return last.year > next.year ? 1: -1;
+    });
+    console.table(births);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
+    const years = inventors.reduce((count, inventor)=>{
+      count += inventor.passed - inventor.year;
+      return count;
+    }, 0);
+    console.log('all live: ' + years);
 
     // 5. Sort the inventors by years lived
+    const yearLived = inventors.sort((last, next) => {
+      const lastLived = last.passed - last.year;
+      const nextLived = next.passed - next.year;
+      return lastLived > nextLived ? 1 : -1;
+    })
+    console.table(yearLived);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
 
     // 7. sort Exercise
-    // Sort the people alphabetically by last name
+    // Sort the people alphabetically by last name  按字母排序
+    const alphas = people.sort((last, next) => {
+      const [alast, afirst] = last.split(', ');
+      const [blast, bfirst] = next.split(', ');
+      return alast > blast ? 1 : -1;
+    })
+    console.log(alphas)
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    
+    const sumObj = data.reduce((obj, item) => {
+      // 避免没有的情况
+      if(!obj[item]) {
+        obj[item] = 0;
+      }
+      obj[item]++;
+      return obj;
+    }, {})
+    console.log(sumObj);
 
   </script>
 </body>
